# deduper

./: .env  .gitignore  09_bak.json  Cargo.toml  README.md  notes.txt
src/: duplicates.rs  duplicates_rayon.rs  error.rs  image.rs  indexer.rs  lib.rs  main.rs  similarity.rs
src/app/: cli.rs  duplicates.rs  models.rs
src/app/commands/: duplicates.rs  mod.rs  remove.rs
src/image/: hash.rs  image.rs  mod.rs  model.rs  ssim.rs
test-data/01/: house.xmp
test-data/01/01-sub/: magazine.heic
test-data/case-2/: 2009-02-25-LX3-10.xmp  2009-02-25-LX3-11.xmp
