[package]
name = "deduper"
version = "0.1.0"
edition = "2021"

[lib]
name = "deduper"
path = "src/lib.rs"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1

[dependencies]
arrayvec = "0.7.6"
bincode = "1.3.3"
chrono = "0.4.38"
env_logger = "0.11.5"
fern = "0.7.0"
fjall = "2.2.0"
futures = "0.3.31"
humantime = "2.1.0"
image = "0.25.4"
indicatif = "0.17.8"
itertools = "0.13.0"
kamadak-exif = "0.5.5"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["full"] }
twox-hash = "2.0.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
